--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
         "test:coverage": "vitest run --coverage"
     },
     "dependencies": {
+        "@fastify/jwt": "^9.1.0",
+        "bcrypt": "^6.0.0",
+        "class-transformer": "^0.5.1",
         "class-validator": "^0.14.2",
         "class-validator-jsonschema": "^5.0.2",
         "fastify": "^5.4.0",
@@ -18,6 +21,7 @@
     },
     "devDependencies": {
         "@tsconfig/node24": "^24.0.1",
+        "@types/bcrypt": "^5.0.2",
         "@types/mongodb": "^4.0.6",
         "@types/node": "^24.0.11",
         "@vitest/coverage-v8": "^3.2.4",
